20-08-2016
Fully parallelized bootstrapped markovchain fit
08-08-2016
Version 0.6
Added multivariate higher order markov chains
Better handlign of steady state analysis on non - recurrent Markov Chains
Fixed an error in the igraph conversion
08-07-2016
Fixed C++ 11 variables types
24-06-2016
Version 0.4.5
Speeding up rmarkovchain using parallel and RcppParallel library.
14-06-2016
Version 0.4.4.4
Bug fixed for markovchainFit when method = bootstrap

09-06-2016
Version 0.4.4.2
added sanitize=false paramter to markovchainFit

31-05-2016
Version 0.4.4.1
Improvement of the internal method checkSequence.
name method to set and get the names of markovchain object.

10-05-2016
Version 0.4.4
rmarkovchain in RCpp (thanks to Deepak and GSOC 2016)
Various small fixes

05-03-2016
Version 0.4.3.1
fixed a bug in the states classification
added options to save output of random sampler in a matrix

10-10-2015
Version 0.4.3
fixed an error in plot function

08-07-2015
Version 0.3.1
Period to Rcpp (thanks to TAE)
communicatingClasses and recurrentClasses (thanks to TAE)
Various optimization (thanks to TAE)
Initial support for Continuous Time Markov Chains (thanks to SAI)
Added new methods: names, !=

15-06-2015
Version 0.3
Added a CrashIntro vignette
Most probability function rewritten in Rcpp
Added standard errors and confidence intervals for MLE (thanks to Tae)
Added confidence intervals for bootstap (thanks to Tae)
Added bayesian Maximum A Posteriori estimation (thanks to Sai)


12-05-2015
Version 0.2.1
Fixed a compatibility issue with R 3 development

12-04-2015
Version 0.2
This is a milestone for markovchain package, since the package project has been 
selected within the funded GSOC 2015 projects.
Thanks to Tae support now the fitting functions have been rewritten in Rcpp.


20-03-2015
Version 0.1.3
Fastened the firstpassage time code thanks to Thoralf suggestion

01-03-2015
Version 0.1.2
Add GitHub project url

17-02-2015
Version 0.1.1