@@ -1,2 +1,2 @@
-10-09-2016
-Modified Makevars to avoid warnings
+08-12-2016
+Added patch to divergence test
