@@ -1,3 +1,5 @@
+08-12-2016
+Added patch to divergence test
 20-08-2016
 Fully parallelized bootstrapped markovchain fit
 08-08-2016
